<resources>
    <string name="back">返回</string>
    <string name="clear">清畫面</string>
    <string name="app_name"></string>
    <string name="action_settings">設定</string>
    <string name="pack_title">螺絲庫位異動</string>
    <string name="head_coil_title">成型廠線材庫位異動</string>
    <string name="wire_coil_title">線材廠線材庫位異動</string>
    <string name="loc_query_title">螺絲庫位查詢</string>
    <!-- Strings related to login -->
    <string name="prompt_name">帳號</string>
    <string name="prompt_password">密碼</string>
    <string name="action_sign_in">登入</string>
    <string name="btn_add">增加</string>
    <string name="execute">執行</string>
    <string name="error_incorrect_password">密碼錯誤</string>
    <string name="error_field_required">輸入有錯誤</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>

    <string name="date_format_error">日期格式錯誤</string>

    <string name="timeout">網路逾時</string>
    <string name="network_error">網路發生錯誤</string>
    <string name="check_network">請檢查網路</string>
    <string name="btn_query">查詢</string>
    <string name="logout">登出</string>
    <string name="logout_message">注意!!有資料未上傳，是否要登出嗎?</string>

    <string name="upload_error">檔案上傳失敗</string>
    <string name="upload_success">上傳成功</string>

    <string name="post_data_ok">資料上傳成功</string>
    <string name="post_data_error">資料上傳失敗</string>

    <string name="insert_data_ok">新增資料成功</string>
    <string name="insert_data_error">新增資料失敗</string>
    <string name="alertDialog_title">訊息視窗</string>
    <string name="call_administrator">請通知系統管理員</string>
    <!-- prog content -->
    <string name="coil_no">卷號</string>
    <string name="job_no">批號</string>
    <string name="loc_no">庫位</string>
    <string name="proc_no">製程</string>
    <string name="scan">掃描</string>
    <string name="manual_insert">上傳</string>
    <string name="prev_barcode">上一個條碼</string>
    <string name="title_activity_plating_reception_query">PlatingReceptionQueryActivity</string>

</resources>
