<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

<!--        <ImageView-->
<!--            android:id="@+id/imageView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:srcCompat="@drawable/logo" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".7"
                android:gravity="center"
                android:text="@string/pack_title"
                android:textSize="26sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLocationMove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:text="@string/execute"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".7"
                android:gravity="center"
                android:text="@string/wire_coil_title"
                android:textSize="26sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnWireCoilLocMove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:text="執行"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".7"
                android:gravity="center"
                android:text="@string/loc_query_title"
                android:textSize="26sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLocQuery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:text="@string/execute"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".7"
                android:gravity="center"
                android:text="電鍍接收"
                android:textSize="26sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPlatingReception"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:text="執行"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".7"
                android:gravity="center"
                android:text="酸洗完工"
                android:textSize="26sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPicklingFinished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:text="執行"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="8sp"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:text="Test"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#FFC107"
                android:text="@string/logout"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/stitLogo"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                app:srcCompat="@drawable/stit_logo" />
        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>